@@ -1,3 +1,10 @@
+2013-06-17  Juanma Barranquero  <lekktu@gmail.com>
+
+	* progmodes/prog-mode.el (prog-prettify-install): Add `composition' to
+	`font-lock-extra-managed-props' if any prettifying keyword is added.
+	(prog--prettify-font-lock-compose-symbol): Use ?\s instead of ?\ .
+	(prog-mode): Use `setq-local'.
+
 2013-06-17  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* international/characters.el (standard-case-table): Set syntax of ?»
